# eulumdat-ugr

./: .gitignore  CONTEXT_eulumdat-ugr.md  README.md  pyproject.toml
data/input/: sample_01.ldt  sample_02.ldt  sample_03.ldt  sample_04.ldt  sample_05.ldt  sample_06.ldt  sample_07.ldt  sample_08.ldt  sample_09.ldt  sample_10.ldt  sample_11.ldt
data/reference/: ugr_table_01_Dialux.csv  ugr_table_01_Relux.csv  ugr_table_02_Dialux.csv  ugr_table_02_Relux.csv  ugr_table_03_Dialux.csv  ugr_table_03_Relux.csv  ugr_table_04_Dialux.csv  ugr_table_04_Relux.csv  ugr_table_05_Dialux.csv  ugr_table_05_Relux.csv  ugr_table_06_Dialux.csv  ugr_table_06_Relux.csv  ugr_table_07_Dialux.csv  ugr_table_07_Relux.csv  ugr_table_08_Dialux.csv  ugr_table_08_Relux.csv  ugr_table_09_Dialux.csv  ugr_table_09_Relux.csv  ugr_table_10_Dialux.csv  ugr_table_10_Relux.csv  ugr_table_11_Dialux.csv  ugr_table_11_Relux.csv  ugr_table_11_cie190.csv
examples/: 01_basic_usage.md
src/eulumdat_ugr/: __init__.py  background.py  geometry.py  guth.py  photometry.py  ugr.py
tests/: test_ugr.py
