[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eulumdat-ugr"
version = "1.0.2"
description = "UGR (Unified Glare Rating) calculation from EULUMDAT (.ldt) photometric files — extension to eulumdat-py"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "123VincentB" }]
requires-python = ">=3.10"
dependencies = [
    "eulumdat-py>=1.0.0",
    "eulumdat-luminance>=1.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]
keywords = ["eulumdat", "ldt", "photometry", "lighting", "ugr", "glare", "cie117", "cie190"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/123VincentB/eulumdat-ugr"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
